add the readers view for the blog

--- a/app/views/authors/posts/index.html.erb
+++ b/app/views/authors/posts/index.html.erb
@@ -20,7 +20,7 @@
               <span class="badge bg-secondary mb-2">Unpublished</span>
             <% end %>
             <h5 class="card-title mb-2 text-dark"><%= post.title %></h5>
-            <p class="tedt-secondary"><%= post.description %></p>
+            <p class="text-secondary"><%= post.description %></p>
           </div>
         </div>
       </div>
