--- a/app/views/authors/posts/_form.html.erb
+++ b/app/views/authors/posts/_form.html.erb
@@ -1,24 +1,16 @@
-<%= form_with(model: post, local: true) do |form| %>
-  <% if post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+<%= form_with(model: post) do |form| %>
 
-      <ul>
-        <% post.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
+  <div class="field mb-4">
     <%= form.label :title, class:'mb-2' %>
-    <%= form.text_field :title, class:'form-control mb-4' %>
+    <%= form.text_field :title, class:'form-control' %>
+    <%= form.error_for :title, class:'text-danger' %>
   </div>
 
-  <div class="field">
+  <div class="field mb-4">
     <%= form.label :description, class:'mb-2' %>
-    <%= form.text_area :description, class:'form-control mb-4' %>
+    <%= form.text_area :description, class:'form-control' %>
+    <%= form.error_for :description, class:'text-danger' %>
   </div>
   
   <div class="field">
