--- a/app/views/authors/posts/edit.html.erb
+++ b/app/views/authors/posts/edit.html.erb
@@ -22,7 +22,11 @@
                     Publish
                     </a>
                 <% end %>
-                <%= link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger w-100 mt-2' %>
+                <% if @post.elements.none? { |element| element.persisted? } %>
+                    <%= link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger w-100 mt-2' %>
+                <% else %>
+                    <%= link_to 'Delete Post', @nil, data: { confirm: 'Delete all alements before delete the post' }, class:'btn btn-warning w-100 mt-2' %>
+                <% end %>
             </div>
         </div>
     </div>
