--- a/app/views/readers/home/index.html.erb
+++ b/app/views/readers/home/index.html.erb
@@ -3,10 +3,10 @@
   <div class="col-md-6 col-lg-4">
     <div class="card post-card mt-3">
       <div class="header-image" style="background-image: url(<%= url_for(post.header_image) %>)"></div>
-      <div class="card-body d-flex flex-column">
+      <div class="card-body d-flex flex-column border-top border-2 border-bot">
         <h5 class="card-title"><%= post.title %></h5>
         <p class="card-text"><%= truncate(post.description, length: 250) %></p>
-        <%= link_to "Read Post", blog_post_path(post), class:'btn btn-light mt-auto ms-auto' %>
+          <%= link_to "Read Post", blog_post_path(post), class:'btn btn-secondary mt-auto ms-auto' %>
       </div>
     </div>
   </div>
