--- a/app/views/readers/posts/show.html.erb
+++ b/app/views/readers/posts/show.html.erb
@@ -1,3 +1,4 @@
+    <%= link_to "back", 'javascript:history.go(-1);', class:'btn btn-dark' %>
 <div class="card post-card mt-3">
     <div class="header-image" style="background-image: url(<%= url_for(@post.header_image) %>)"></div>
     <div class="card-body d-flex flex-column p-5">
