--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-absolute top-0 w-100 border-bottom px-5">
     <div class="container-fluid">
-      <a class="navbar-brand fs-2 fw-bold text-uppercase" href=" javascript:history.go(-1);">Blog do Totore</a>
+      <a class="navbar-brand fs-2 fw-bold text-uppercase" href="<%= url_for(root_path) %>">Blog do Totore</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
