usernames to authors

--- a/app/javascript/stylesheets/readers/_posts.scss
+++ b/app/javascript/stylesheets/readers/_posts.scss
@@ -16,5 +16,8 @@
             background-size: cover;
             background-position: center;
         }
+        .card-header{
+            height: 25xp;
+        }
     }
 }
