--- a/app/views/authors/posts/index.html.erb
+++ b/app/views/authors/posts/index.html.erb
@@ -1,6 +1,7 @@
-<h4 class="d-flex justify-content-between mb-4">
+<h4 class="d-flex mb-4">
   <span>Posts</span>
-  <%= link_to 'New Post', new_post_path, class:'btn btn-primary' %>
+  <%= link_to 'New Post', new_post_path, class:'btn btn-primary ms-auto mx-3' %>
+  <%= link_to 'Log Out', destroy_author_session_path, method: :delete, class:'btn btn-danger' %>
 </h4>
 
 <% @posts.each do |post| %>
