--- a/app/views/readers/home/index.html.erb
+++ b/app/views/readers/home/index.html.erb
@@ -1,14 +1,18 @@
 <div class="row">
   <% @posts.each do |post| %>
-  <div class="col-md-6 col-lg-4">
-    <div class="card post-card mt-3">
-      <div class="header-image" style="background-image: url(<%= url_for(post.header_image) %>)"></div>
-      <div class="card-body d-flex flex-column border-top border-2 border-bot">
-        <h5 class="card-title"><%= post.title %></h5>
-        <p class="card-text"><%= truncate(post.description, length: 250) %></p>
-          <%= link_to "Read Post", blog_post_path(post), class:'btn btn-secondary mt-auto ms-auto' %>
-      </div>
+    <div class="col-md-6 col-lg-4">
+      <%= link_to blog_post_path(post), class:'text-decoration-none' do %>
+        <div class="card post-card mt-3">
+          <div class="header-image" style="background-image: url(<%= url_for(post.header_image) %>)"></div>
+          <div class="card-body d-flex flex-column border-top border-2 border-bot">
+            <h5 class="card-title text-dark"><%= post.title %></h5>
+            <p class="card-text text-secondary "><%= truncate(post.description, length: 250) %></p>
+          </div>
+            <div class="card-footer position-relativ">
+              Published at <%= post.published_at.strftime("%d/%m/%Y - %H:%M") %>
+            </div>
+        </div>
+      <% end %>
     </div>
-  </div>
   <% end %>
 </div>
