--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,23 @@
-<h2>Forgot your password?</h2>
+<div class="card position-absolute start-50 top-50 translate-middle py-5 px-3">
+  <h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'w-100' %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <div class="mt-4 text-center">
+      <%= f.submit "Send me reset password instructions", class:'btn btn-primary' %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="d-flex justify-content-between mt-5 p-0">
+      <%= link_to "Log in", new_session_path(resource_name), class:'btn btn-secondary ' %>
+      <%= link_to "Sign up", new_registration_path(resource_name), class:'btn btn-secondary ' %>
+    </div>
+  <% end %>
+
+  
+</div>
