--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,10 +27,8 @@
       </div>
     
       <div class="d-flex justify-content-between mt-2 p-0">
-        <%= f.submit "Sign up", class:'btn btn-secondary' %>
+        <%= f.submit "Sign up", class:'btn btn-primary' %>
         <%= link_to "Log in", new_session_path(resource_name), class:'btn btn-secondary ' %>
       </div>
-    <% end %>
-    
-    
+    <% end %>    
   </div>
