--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -7,6 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         </ul>
+      <% if author_signed_in? %>
+        <%= link_to "Manage Posts", posts_path, class:'btn btn-light me-2' %>
+      <% end %>
+
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="WIP" aria-label="Search">
           <button class="btn btn-outline-light disabled" type="submit">Search</button>
