--- a/app/views/authors/posts/_form.html.erb
+++ b/app/views/authors/posts/_form.html.erb
@@ -19,12 +19,20 @@
     <div class="mt-1">
     <% if post.header_image.present? %>
       <small>Current Image:</small>
-      <%= image_tag(post. header_image, width: '100%') %>
+      <%= image_tag(post.header_image, width: '100%') %>
     <% end %>
     </div>
   </div>
 
+  <div class="field d-flex justify-content-between mt-2">
+    <%= form.select(:category_id, Category.all.collect { |c| [ c.name, c.id ] }, {}, { "data-placeholder": "Select Category", class:'btn btn-secondary' },) %>
+    <%= link_to 'New Category', new_category_path, class:'btn btn-secondary' %>
+  </div>
+
   <div class="actions">
+  
     <%= form.submit class:'btn btn-primary w-100 mt-2' %>
   </div>
 <% end %>
+
+
