--- a/app/views/readers/home/index.html.erb
+++ b/app/views/readers/home/index.html.erb
@@ -3,12 +3,21 @@
     <div class="col-md-6 col-lg-4">
       <%= link_to blog_post_path(post), class:'text-decoration-none' do %>
         <div class="card post-card mt-3">
-          <div class="header-image" style="background-image: url(<%= url_for(post.header_image) %>)"></div>
+          <% if post.header_image.present? %>
+            <div class="header-image" style="background-image: url(<%= url_for(post.header_image) %>)">
+            <p class="badge bg-secondary position-absolute end-0 top-0 mt-2 me-2"><%= post.category.name %>
+            </div>
+          <% else %>
+            <div class="header-image">
+              <p class="fs-1 fw-bold text-danger text-center mt-5">POST WITHOUT IMAGE</p>
+              <p class="badge bg-secondary position-absolute end-0 top-0 mt-2 me-2"><%= post.category.name %>
+            </div>
+          <%end%>
           <div class="card-body d-flex flex-column border-top border-2 border-bot">
             <h5 class="card-title text-dark"><%= post.title %></h5>
             <p class="card-text text-secondary "><%= truncate(post.description, length: 250) %></p>
           </div>
-            <div class="card-footer position-relativ">
+            <div class="card-footer position-relative">
               Published at <%= post.published_at.strftime("%d/%m/%Y - %H:%M") %>
             </div>
         </div>
