--- a/app/views/layouts/authors.html.erb
+++ b/app/views/layouts/authors.html.erb
@@ -13,10 +13,13 @@
   </head>
 
   <body class="bg-light authors">
+    <%= render 'shared/nav' %>
     <div class="container">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <%= yield %>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
 </html>
